# HomeWork_7_Web

./: db.py  models.py  my_select.py  pyproject.toml  seeds.py
alembic/: env.py
alembic/versions/: 9712e177b6d6_initial_migration.py
